--- a/index.html
+++ b/index.html
@@ -6,5 +6,16 @@
     <title>Art Page</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
-  <body></body>
+  <body>
+    <!-- Navbar Start -->
+    <section class="wrapper-container">
+      <nav>
+        <ul>
+          <li><a href="">Logo</a></li>
+        </ul>
+        <div class="burger"><span></span><span></span><span></span></div>
+      </nav>
+    </section>
+    <!-- Navbar End -->
+  </body>
 </html>
