Structure the head section

--- a/index.html
+++ b/index.html
@@ -17,5 +17,19 @@
       </nav>
     </section>
     <!-- Navbar End -->
+    <!-- Header Start -->
+    <header>
+      <h1 class="main-headings">
+        WHAT <br />
+        IS CALLED ART?
+      </h1>
+      <p class="primary-headings">
+        Art, also called (to distinguish it from other art forms) visual art, a
+        <span class="bg-gray">visual object or experience</span>consiously
+        created through an expression of skill or imagination.
+      </p>
+    </header>
+
+    <!-- Header end -->
   </body>
 </html>
